# enterprise-genai-platform

./: LICENSE  README.md  pyproject.toml
.github/workflows/: eval-pipeline.yaml
config/: eval_benchmarks.yaml  guardrail_rules.yaml  model_registry.yaml
docs/: design-decisions.md  model-selection-guide.md  operating-model.md  security-architecture.md
src/evaluation/: eval_framework.py  metrics.py  regression_tests.py
src/guardrails/: input_validator.py  output_filter.py  toxicity_gate.py
src/observability/: cost_tracker.py  drift_monitor.py  trace_logger.py
src/orchestration/: chain_router.py  fallback_handler.py  prompt_registry.py
src/rag/: chunking.py  index_manager.py  retriever.py
tests/: test_guardrails.py  test_orchestration.py
